<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon_silhouette"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/notes"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/products"
            android:title="@string/menu_productos" />

        <item
            android:id="@+id/nav_cuentavendedor"
            android:icon="@drawable/user"
            android:title="@string/menu_micuenta" />
        <item
            android:id="@+id/nav_agregar_producto"
            android:icon="@drawable/user"
            android:title="Agregar Producto" />

    </group>
</menu>