<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <Button
        android:id="@+id/btn_regresar_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_white"
        android:drawableStart="@drawable/ic_left"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="start|center_vertical"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
         />

    <TextView
        android:id="@+id/enunsolopaso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/registerconrrss"
        android:textColor="#000000"
        android:textSize="14sp"
         />

    <Button
        android:id="@+id/btn_login_fb"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fb" />

    <Button
        android:id="@+id/btn_login_g"
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/google"
        android:translationX="235dp"
        android:translationY="-68dp"/>


    <TextView
        android:id="@+id/contucorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center|start"
        android:text="@string/regconcorreo"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userDNI"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="DNI"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_portrait"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_DNI"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_circle"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/userLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="lastname"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_circle"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_apellido"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/etUserPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="number"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_number"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/etUserDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="date"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_date"
        android:inputType="date"
        android:paddingStart="12dp"

        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/et_userMail_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="email"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_email_login"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/et_userPassword_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="password"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_pass_login"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/et_ConfirmPassword_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="password"
        android:background="@drawable/custom_imput"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/et_confpass_login"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/et_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/concuenta"/>



</LinearLayout>