<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_regresar_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_white"
        android:drawableStart="@drawable/ic_left"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="start|center_vertical"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/enunsolopaso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/registerconrrss"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login_fb"

        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/fb" />

    <Button
        android:id="@+id/btn_login_g"

        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/google"
        android:translationX="235dp"
        android:translationY="-68dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="500dp"/>


</LinearLayout>