<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/userDNI"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="DNI"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_portrait"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_DNI"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewreg"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/contucorreo" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="name"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_circle"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/userDNI" />

        <EditText
            android:id="@+id/userLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="lastname"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_circle"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_apellido"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewreg"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <EditText
            android:id="@+id/etUserPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="number"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_number"
            android:inputType="phone"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/et_userMail_register"
            app:layout_constraintStart_toStartOf="@+id/et_userMail_register"
            app:layout_constraintTop_toBottomOf="@+id/userLastName" />

        <EditText
            android:id="@+id/etUserDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="date"
            android:background="@drawable/custom_imput"
            android:clickable="true"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="12dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/et_date"
            android:inputType="date"
            android:maxLines="1"
            android:paddingStart="12dp"

            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/et_userMail_register"
            app:layout_constraintStart_toStartOf="@+id/et_userMail_register"
            app:layout_constraintTop_toBottomOf="@+id/etUserPhone" />

        <EditText
            android:id="@+id/et_userMail_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="email"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_email_login"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserDate" />

        <EditText
            android:id="@+id/et_userPassword_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_pass_login"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewreg"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/et_userMail_register" />

        <EditText
            android:id="@+id/et_ConfirmPassword_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/et_confpass_login"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/et_userPassword_register" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_main"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewreg"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/et_ConfirmPassword_register" />

        <TextView
            android:id="@+id/et_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/concuenta"
            app:layout_constraintEnd_toEndOf="@+id/textViewreg"
            app:layout_constraintStart_toStartOf="@+id/textViewreg"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>